@@ -326,8 +326,7 @@ BOOL EPRule::MatchScript(Event *pEvent)
    }
    else
    {
-      nxlog_write(MSG_EPRULE_SCRIPT_EXECUTION_ERROR, EVENTLOG_ERROR_TYPE,
-               "ds", m_dwId, m_pScript->getErrorText());
+      nxlog_write(MSG_EPRULE_SCRIPT_EXECUTION_ERROR, EVENTLOG_ERROR_TYPE, "ds", m_dwId, m_pScript->getErrorText());
    }
    free(ppValueList);
    delete pGlobals;
