@@ -2,6 +2,7 @@
 * 1.2.0
 *
 
+- Added new NXSL functions and object properties for accessing topology information
 - Java console:
 	- Added alarm history log viewer
 
